website/code/pidigits-kaffe.log
BUILD COMMANDS FOR: pidigits.kaffe

Sun Sep 18 19:06:48 PDT 2005

rm: cannot remove `pidigits.kaffe_run/pidigits.java': Permission denied
rm: cannot remove `pidigits.kaffe_run/pidigits.class': Permission denied
rm: cannot remove `pidigits.kaffe_run/PiDigitSpigot.class': Permission denied
rm: cannot remove `pidigits.kaffe_run/Transformation.class': Permission denied
make[3]: [pidigits.kaffe_run] Error 1 (ignored)
( if [ ! -d pidigits.kaffe_run ] ; then mkdir pidigits.kaffe_run ; fi)
cp /opt/shootout/shootout/bench/pidigits/pidigits.kaffe pidigits.kaffe_run/pidigits.java
cp: cannot create regular file `pidigits.kaffe_run/pidigits.java': Permission denied
make[3]: [pidigits.kaffe_run] Error 1 (ignored)
( cd pidigits.kaffe_run ; /usr/lib/j2sdk1.4.2_05/bin/javac  -classpath '.' pidigits.java )
pidigits.java:9: error while writing pidigits: pidigits.class (Permission denied)
public class pidigits {
       ^
1 error
make[3]: [pidigits.kaffe_run] Error 1 (ignored)
touch pidigits.kaffe_run
touch: setting times of `pidigits.kaffe_run': Permission denied
make[3]: [pidigits.kaffe_run] Error 1 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

 /usr/bin/kaffe -classpath pidigits.kaffe_run  pidigits %A


PROGRAM OUTPUT
==============
3141592653	:10
5897932384	:20
6264338327	:30
9502884197	:40
1693993751	:50
0582097494	:60
4592307816	:70
4062862089	:80
9862803482	:90
5342117067	:100
9821480865	:110
1328230664	:120
7093844609	:130
5505822317	:140
2535940812	:150
8481117450	:160
2841027019	:170
3852110555	:180
9644622948	:190
9549303819	:200
6442881097	:210
5665933446	:220
1284756482	:230
3378678316	:240
5271201909	:250
1456485669	:260
2346034861	:270
0454326648	:280
2133936072	:290
6024914127	:300
